# ai-codescan

./: .dockerignore  .env.example  .gitignore  CONVERSATIONAL_ANALYSIS_STATUS.md  EVALUATION.md  ISSUES.md  PHASE_1_COMPLETION_REPORT.md  PLAN.md  README.md  README_AUTH_TESTING.md  REMAINING-TASK.md  TASK.md  WORKFLOW.md  config.example.py  docker-compose.yml  pyproject.toml  requirements.txt  test_authentication_demo.py
data/: ai_codescan.db
docker/: Dockerfile  test-deps.py
docs/: AGENT_FRAMEWORK_EVALUATION.md  AUTHENTICATION.md  CONVERSATIONAL_ANALYSIS_GUIDE.md  DESIGN.md  DOCKER_PORTS_CONFIG.md  ICON_OPTIONS_PREVIEW.md  TASK_1.2_COMPLETION_SUMMARY.md  TESTING_AUTHENTICATION.md  TEST_REPOSITORIES.md  Task_4_4_Implementation_Guide.md  UI_IMPROVEMENTS.md  UI_STYLING_FIXES.md
docs/api/: README.md
logs/: task_2_7_repository_analysis.json  task_2_8_integration_test_results.json
logs/debug/: summary_task_1_9_mailmarmoset_1748661954.json  summary_task_1_9_picopipe_1748661953.json  summary_task_1_9_tinysearch_1748661951.json  summary_test_basic_logging.json  summary_test_git_operations.json  summary_ui_session_46067ccd-7ae0-499c-b838-58595afd28b1.json  summary_ui_session_faac4744-3bfe-4868-b126-fe3fbbb66292.json  summary_workflow_simulation_test.json
logs/history/: sessions.json
logs/history/scans/: 060fa982-8515-48e9-b110-0b08f7d1ef92.json  17508647-4c5f-46a1-b784-713d80472e75.json
scripts/: comprehensive_phases_test.py  debug_pmd_parsing.py  final_system_validation.py  generate_docs.py  quick_start_auth.py  reset_auth_database.py  setup.sh  setup_auth_database.py  setup_neo4j_ckg.py  simple_neo4j_test.py  test_architectural_analyzer.py  test_debug_logging.py  test_java_ast_to_ckg.py  test_java_ast_to_ckg_simple.py  test_java_parser_simple.py  test_java_static_analysis_demo.py  test_langgraph.py  test_neo4j.py  test_task_1_3.py  test_task_1_9_repositories.py  test_task_2_1_pat_integration.py  test_task_2_2_java_integration.py  test_task_2_6_integration.py  test_task_2_7_repositories.py  test_task_2_8_integration.py  validate_env.py  validate_static_analysis.py  view_debug_logs.py
src/: main.py
src/agents/ckg_operations/: __init__.py  ast_to_ckg_builder.py  ckg_operations_agent.py  ckg_query_interface.py  ckg_schema.py  code_parser_coordinator.py  dart_parser.py  java_parser.py  kotlin_parser.py
src/agents/code_analysis/: __init__.py  architectural_analyzer.py  contextual_query.py  dart_parser.py  java_parser.py  kotlin_parser.py  llm_analysis_support.py  pr_analyzer.py  static_analysis_integrator.py
src/agents/data_acquisition/: __init__.py  data_preparation.py  git_operations.py
src/agents/interaction_tasking/: __init__.py  auth_web_ui.py  chat_repository_analysis.py  dialog_manager.py  enhanced_code_viewer.py  enhanced_data_tables.py  web_ui.py  (+11 more)
tests/: test_architectural_analyzer.py  test_ast_to_ckg_builder.py  test_auth_system.py  test_ckg_operations.py  test_code_analysis.py  test_dart_ast_to_ckg_builder.py  test_dart_ckg_query_interface.py  test_dart_ckg_query_interface_simple.py  test_dart_ckg_schema.py  test_dart_integration.py  test_dart_parser.py  test_dart_static_analysis.py  test_data_acquisition.py  test_flake8_integration.py  test_history_manager.py  test_java_parser.py  test_java_schema.py  test_java_static_analysis.py  test_kotlin_ast_to_ckg_builder.py  test_kotlin_ckg_query_interface.py  test_kotlin_ckg_schema.py  test_kotlin_parser.py  test_kotlin_static_analysis.py  test_llm_services.py  test_pat_handler.py  test_synthesis_reporting.py
tests/unit/: test_interaction_tasking.py
(+21 files in other folders)
